# wall-a-maze

./: .gitignore  2016-10-28-13-42-00.bag  README.md  occupancy_grid_experiments.ipynb
src/UArmForROS/: CMakeLists.txt  README.md
src/UArmForROS/launch/: kth_uarm.launch
src/UArmForROS/scripts/: kth_uarm_core.py
src/UArmForROS/srv/: ConvertToJoints.srv
src/general/config/: general_params.yaml
src/imu/: package.xml
src/imu/src/: Spatial-simple.py
src/key_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/key_controller/config/: key_controller_params.yaml
src/key_controller/launch/: key_controller.launch
src/key_controller/src/: key_controller.cpp
src/keyop/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/keyop/config/: keyop_params.yaml
src/keyop/launch/: keyop.launch
src/keyop/msg/: Keyop.msg
src/keyop/src/: keyop.cpp
src/localization/: CMakeLists.txt  package.xml
src/localization/launch/: tmp_isac.launch
src/localization/nodes/: laser_broadcaster.py  robot_broadcaster.py
src/localization/scripts/: dev.ipynb  fake_robot_node.py  localization.py  map.py  map.txt  particle.py
src/localization/src/: constants.hpp  geometry.cpp  geometry.hpp  localization.cpp  map.cpp  map.hpp  particle_filter.cpp  particle_filter.hpp  stats.cpp  stats.hpp
src/localization/srv/: AddPickable.srv
src/manipulation/: CMakeLists.txt  move_arm.py  package.xml  test_calibration.yaml  test_calibrationFIRST.yaml  test_calibrationFOURTH_DIFSIDE.yaml  test_calibrationSECOND.yaml  test_calibrationTHIRD_DIFSIDE.yaml
src/manipulation/action/: PickUpObject.action
src/manipulation/launch/: manipulation.launch
src/manipulation/msg/: Manipulation.msg
src/manipulation/nodes/: arm_broadcaster.py  eef_publisher.py  help_publisher.py  manipulation_publisher.py  object_wToA_listener.py  pub_object.py  transform_wheelToArm.py
src/manipulation/scripts/: manipulate.py  manipulate_service.py  move_arm_client.py  move_arm_client_OLD.py  move_arm_client_class.py  pickup_client.py  pickup_server.py  pickup_server_simple.py  pub_joint_helper.py  pub_uarm_curpos.py
src/manipulation/srv/: CarryObject.srv  DropObject.srv  PickupObject.srv  PickupTrap.srv  PlaceObject.srv
src/motherbrain/: CMakeLists.txt  package.xml
src/motherbrain/scripts/: mother.py
src/odometry/: CMakeLists.txt  package.xml
src/odometry/launch/: odometry.launch
src/odometry/src/: odometry.cpp
src/perception/: CMakeLists.txt  cvfh.cpp  cvfh.h  package.xml
src/perception/calibrate/: CMakeLists.txt  package.xml
src/perception/classifier/: CMakeLists.txt  package.xml
src/perception/config/: perception_params.yaml
src/perception/extract_object/: CMakeLists.txt  package.xml
src/perception/generate_views_cad/: CMakeLists.txt  package.xml
src/perception/generate_views_real/: CMakeLists.txt  package.xml
src/perception/launch/: perception.launch
src/perception/msg/: Object.msg
src/perception/nodes/: pointCloud_broadcaster.py
src/perception/perception/: package.xml
src/perception/perception_helper/: CMakeLists.txt  package.xml
src/perception/qrcode_detection/: CMakeLists.txt  package.xml
src/perception/src/: cvfh.cpp  cvfh.h  hsv_color.cpp  hsvcolor.cpp  hsvcolor.h  perception.cpp  point_cloud_helper.cpp  point_cloud_helper.h  pointcloudhelper.cpp  pointcloudhelper.h
src/perception/test_classifier/: CMakeLists.txt  package.xml
src/perception/train_classifier/: CMakeLists.txt  package.xml
src/planner/: CMakeLists.txt  occupancy_grid_experiments.ipynb  package.xml
src/planner/scripts/: grid.py  (+3 more)
src/wheels/: CMakeLists.txt  package.xml
(+702 files in other folders)
